Events micro (#28)
* Dodani testovi, code refactoring, sitne izmjene

* Dodani testovi i sitne izmjene

* Dodani testovi